# ZetaCP

./: .gitignore  LICENSE  README.md  ROADMAP.md  ZETACP_GUIDE.md  build.py  icon-mapping.json  index.html  package-lock.json  package.json  tailwind.config.js  task.md  vite.config.ts  vscode-design-tokens.md  zeta_cp_resume.md
.agents/: AGENTS.md
Zexample/: CodeMirrorArea.tsx  TestCaseItemUI.tsx  TestcaseManagerContainer.tsx  TestcaseManagerUI.tsx
src/: App.css  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: calculator.rs  companion.rs  compiler.rs  docs.rs  file_system.rs  lsp.rs  mod.rs  overlay.rs  session.rs  settings.rs  snippets.rs  testcases.rs
src-tauri/src/commands/codeforces/: dpapi.rs  mod.rs
src-tauri/src/commands/compiler/: commands.rs  helper.rs
src-tauri/src/commands/file_system/: helper.rs  tests.rs
src-tauri/src/commands/lsp/: helper.rs  io.rs  setup.rs
src-tauri/src/commands/stress_test/: commands.rs  db_helpers.rs  helpers.rs  mod.rs  runner.rs  types.rs
src-tauri/src/commands/testcases/: crud.rs  diff.rs  import_export.rs  judge.rs  load.rs  mod.rs  subtasks.rs  types.rs
src-tauri/src/db/: global_repo.rs  mod.rs  repository.rs
src-tauri/src/db/migrations/: v1.sql  v10.sql  v11.sql  v12.sql  v13.sql  v14.sql  v2.sql  v3.sql  v4.sql  v5.sql  v6.sql  v7.sql  v8.sql  v9.sql
src-tauri/src/judge/: compiler.rs  diff.rs  engine.rs  mod.rs  orchestrator.rs  runner.rs  sandbox.rs  verdict.rs
(+153 files in other folders)
